# onvif-cam-rs

./: Cargo.toml  README.md  notes.md
examples/ip-cam-haar/: .gitignore  Cargo.toml  devices_found.txt
examples/ip-cam-haar/src/: main.rs
examples/multiplexing/: Cargo.toml  README.md
examples/multiplexing/src/: main.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
examples/tch-opencv-mobilenet/: Cargo.toml  README.md
examples/tch-opencv-mobilenet/src/: main.rs
src/: client.rs  device.rs  io.rs  lib.rs  main.rs  yolov8_onnx.rs
src/builder/: camera.rs  mod.rs
src/client/: mod.rs
src/device/: camera.rs  mod.rs
src/device/camera/: mod.rs
src/utils/: io.rs  mod.rs
