[package]
name = "onvif-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = "0.11"
url = "2.4.0"
xml-rs = "0.8"

[dependencies.tokio]
version = "1"
features = ["net"]

[dev-dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
