[package]
name = "onvif-cam-rs"
version = "0.2.1"
edition = "2021"
authors = ["Gary Suyemoto <me@garysuyemoto.com>"]
description = "ONVIF device messaging protocol"
repository = "https://github.com/gsuyemoto/onvif-client-rs"
documentation = "https://docs.rs/onvif-cam-rs"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.73"
bytes = "1.4.0"
log = "0.4.20"
reqwest = "0.11"
url = "2.4.0"
xml-rs = "0.8"

[dependencies.tokio]
version = "1"
features = ["net"]

[dependencies.uuid]
version = "1.4"
features = ["v4", "fast-rng"]
