[package]
name = "tch-opencv-mobilenet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
opencv = "0.84.5"
onvif-cam-rs = {path="../../"}
env_logger = "0.10.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tch]
version = "0.13.0"
features = ["download-libtorch"]
